# fundraiser-challenge

./: Cargo.toml
src/: constants.rs  error.rs  lib.rs
src/instructions/: checker.rs  contribute.rs  initialize.rs  mod.rs  refund.rs
src/state/: contributor.rs  fundraiser.rs
